# tgcrypto_wasm

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  build.sh  deno.jsonc  entrypoint.sh  test.ts
src/: ctr256.cpp  ctr256.h  ige256.cpp  tgcrypto.c  tgcrypto.cpp
testdata/: ctr.json
tests/: cbc_test.ts  ctr_test.ts  deps.ts  factorize_test.ts  ige_test.ts
